[package]
name = "puccinia_s_checkmate"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.30"
linfa = "0.7.0"
linfa-datasets = "0.7.0"
linfa-logistic = "0.7.0"
ndarray = "0.15.6"
rand = "0.8.5"
regex = "1.10.5"

[dev-dependencies]

[profile.release]
#debug = true
lto = true
