[package]
name = "mateus"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.30"
rand = "0.9.1"
regex = "1.11.1"
static_assertions = "1.1.0"

[dev-dependencies]

[profile.release]
#debug = true
lto = true

[[bench]]
name = "bn"
harness = false
