[package]
name = "spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3"
wasm-bindgen = "0.2"
yew = { version="0.20.0", features=["csr"]}  
puccinia_s_checkmate = { path = "../../../puccinia_s_checkmate"}

